# serbian-data-mcp

./: .bandit  .demo_session.sh  .gitignore  API_CONNECTION.md  DEV_GUIDE.md  LICENSE  MCP_INTELLIGENCE.md  Makefile  README.md  USER_SCENARIOS.md  browse_rzs.py  browse_statistics.py  build_demos.py  build_extra_demos.py  build_showcase.py  config.example.json  configure.py  demo_driver.py  demo_recording.cast  demo_recording.sh  demo_scenarios.py  demo_viz.py  example_mcp_client.py  example_usage.py  explore_data.py  fetch_zemlja.py  generate_showcase.py  index.html  list_all_datasets.py  list_sample_datasets.py  pyproject.toml  render.yaml  search_age_population.py  search_serbian.py  setup.sh  smithery.yaml  start_server.sh  test_connection.sh  test_mcp_connection.py  wsgi.py
.github/workflows/: code-quality.yml  pages.yml  publish.yml  test.yml
.omc/autopilot/: completion-summary.md  spec.md
.omc/handoffs/: phase1-phase2.md
.omc/plans/: autopilot-impl.md
.omc/research/mcp-review-20250610-001/: report.md
.omc/research/mcp-review-20250610-001/stages/: stage-1-findings.md  stage-2-findings.md  stage-3-findings.md  stage-4-findings.md
.omc/state/: agent-replay-0320455a-91fb-4301-ba32-bf92400f48cb.jsonl  agent-replay-f7c529da-f9e8-4709-9cb6-dc8b79b92717.jsonl
docs/: API_REFERENCE.md  CONTRIBUTING.md  EXAMPLES.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md
exports/demo/: 01_employment.html  02_air_quality.html  03_census.html  04_cross_analysis.html  05_budgets.html  06_real_estate.html  07_population_pyramid.html  08_electricity.html  index.html
exports/showcase/: index.html
src/serbian_data_mcp/: __init__.py  __main__.py  config.py  config_validation.py  exceptions.py  tools.py
src/serbian_data_mcp/api/: __init__.py  cache.py  client.py  models.py
src/serbian_data_mcp/catalog/: __init__.py  cache.py  exceptions.py  models.py  preview.py  search.py  suggestions.py
src/serbian_data_mcp/data/: __init__.py  parsers.py  transformers.py
src/serbian_data_mcp/intelligence/: __init__.py  query_expander.py
src/serbian_data_mcp/tools/: __init__.py  _helpers.py  analysis.py  animations.py  charts_3d.py  data.py  export.py  maps.py  novel_charts.py  prompts.py  resources.py  search.py  transform.py  visualization.py
src/serbian_data_mcp/viz/: __init__.py  advanced_charts.py  animations.py  charts.py  charts_3d.py  data_tables.py  datawrapper_export.py  exporters.py  forecast.py  infographics.py  insights.py  map_advanced.py  maps.py  novel_charts.py  scrollytelling.py  special_charts.py  themes.py  tooltips.py
tests/: __init__.py  test_analysis_tools.py  test_animations_tools.py  test_api.py  test_api_client.py  test_cache.py  test_catalog.py  test_catalog_cache.py  test_catalog_preview_suggestions.py  test_config.py  test_data.py  test_data_tables.py  test_data_tools.py  test_exceptions.py  test_export_tools.py  test_helpers.py  test_integration.py  test_intelligence.py  test_maps_tools.py  test_mcp_client.py  test_models.py  test_novel_charts_tools.py  test_ported_tools.py  test_search.py  test_search_tools.py  test_tools_charts_3d.py  test_transform_tools.py  test_transformers.py  test_visualization_tools.py  test_viz.py  test_viz_advanced_charts.py  test_viz_animations.py  test_viz_charts_3d.py  test_viz_datawrapper_export.py  test_viz_exporters.py  test_viz_forecast.py  test_viz_infographics.py  test_viz_insights.py  test_viz_map_advanced.py  test_viz_maps.py  (+5 more)
web_demo/: app.py  start.sh
web_demo/static/: index.html
