[project]
name = "serbian-data-mcp"
version = "0.1.0"
description = "MCP server for Serbian open data portal (data.gov.rs) with visualization capabilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.11.0",
    "plotly>=5.18.0",
    "pandas>=2.2.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
serbian-data-mcp = "serbian_data_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]
